# body_fatigue_detection

./: .gitignore  README.md  config.json  docker-compose.yml
data_analysis/: Cargo.toml  Dockerfile  build.rs
data_analysis/src/: alerts_reporter.rs  config_parser.rs  main.rs
data_analysis/src/detection/: entry_point.rs  eyes_analyzer.rs  mod.rs  shoulders_analyzer.rs  types.rs
data_analysis/src/detection/eyes/: blink.rs  calibration.rs  eye_state.rs  eyes_analyzer.rs  mod.rs
data_analysis/src/detection/utils/: avg_calculator.rs  mod.rs  timer.rs
data_analysis/src/middleware/: body_info.rs  builder.rs  mod.rs  translation.rs  types.rs
data_analysis/src/middleware/grpc/: listener.rs  mod.rs  proto.rs  visualization_client.rs
img_processing/: Dockerfile  fix_proto_import_path.py  generate_proto_files.sh  requirements.txt
img_processing/src/: app.py  common.py  image_consumer.py  image_gatherer.py  middleware.py
img_processing/src/mediapipe_models/: executor.py  face.py  pose.py
img_processing/src/proto_translation/: common.py  eyes.py  image.py  landmarks_common.py
proto/: alerts.proto  body_info.proto  common.proto  detected_landmarks.proto  image.proto  image_data_handler.proto  visualization_service.proto
visualization/: .clang-format  CMakeLists.txt  Dockerfile
visualization/src/: CMakeLists.txt  ConfigParser.hpp  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
visualization/src/middleware/: middleware.cmake
visualization/src/middleware/grpc/: ImageListener.cpp  ImageListener.hpp  grpc.cmake  protobuf.cmake
visualization/src/utils/: Alert.hpp  Image.hpp  ProtoTranslation.hpp  Result.hpp
visualization/tests/: CMakeLists.txt
