[package]
name = "data_processing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.77"
prost = "0.12.3"
rayon = "1.9.0"
rustfmt = "0.10.0"
serde = "1.0.197"
serde_json = "1.0.114"
tokio = { version = "1.36.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.11.0"
tonic-build = "0.11.0"

[build-dependencies]
tonic-build = "0.11.0"
